--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 /*--------------------------------------------------------------
@@ -1323,6 +1323,7 @@ section {
   overflow: hidden;
   border-right: 3px solid #454035;
   border-bottom: 3px solid #454035;
+  
 }
 
 .gallery .gallery-item img {
@@ -1332,6 +1333,7 @@ section {
 .gallery .gallery-item:hover img {
   transform: scale(1.1);
 }
+s
 
 /*--------------------------------------------------------------
 # Chefs
